--- a/dashboard_table.html
+++ b/dashboard_table.html
@@ -54,7 +54,7 @@
                     <th width="10">#</th>
                     <th>品項</th>
                     <th width="80">Name</th>
-                    <th>Email</th>
+                    <th class="d-none d-md-block">Email</th>
                     <th width="80">狀態</th>
                     <th class="text-right" width="120">金額</th>
                     <th class="text-center" width="150">操作</th>
@@ -67,7 +67,7 @@
                     <td>Mark
                         <span class="badge badge-pill badge-danger">奧客</span>
                     </td>
-                    <td>Mark@mail.com</td>
+                    <td class="d-none d-md-block">Mark@mail.com</td>
                     <td>已出貨</td>
                     <td class="text-right">NT$ 899</td>
                     <td class="text-center">
@@ -97,7 +97,7 @@
                     <td>Jacob
                         <span class="badge badge-pill badge-success">常客</span>
                     </td>
-                    <td>Jacob@mail.com</td>
+                    <td class="d-none d-md-block">Jacob@mail.com</td>
                     <td>
                         <span class="text-danger">缺貨</span>
                     </td>
@@ -127,7 +127,7 @@
                     <th scope="row">3</th>
                     <td class="text-primary">防滑燈罩 100個</td>
                     <td>Larry</td>
-                    <td>Larry@mail.com</td>
+                    <td class="d-none d-md-block">Larry@mail.com</td>
                     <td>已出貨</td>
                     <td class="text-right">NT$ 14,060</td>
                     <td class="text-center">
